@@ -1,3 +1,11 @@
+2005-05-06  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* unix/configure: regen
+	* unix/configure.in: add AC_C_BIGENDIAN check and pkg-config xft
+	checks to extend xft search.
+	* unix/tcl.m4: correct Solaris 10 (5.10) check and add support for
+	x86_64 Solaris cc builds.
+
 2005-04-28  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
 
 	* macosx/tkMacOSXNotify.c (TkMacOSXWaitForEvent): Fix for typo in
